# Bazel_demo

./: BUILD.bazel  WORKSPACE.bazel  explain.txt  go.mod  go_deps.bzl  platform.bzl
go_web/: BUILD.bazel  main.go
go_web1/: BUILD.bazel  main.go
lib1/: BUILD.bazel  lib1.go
