load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "app1",
    embed = [":go_web_lib"],
    visibility = ["//visibility:public"],
)

# filegroup(
#     name = "app_bin1",
#     srcs = [":app1"],
#     visibility = ["//visibility:public"],
# )

go_library(
    name = "go_web_lib",
    srcs = ["main.go"],
    importpath = "my_project/go_web",
    visibility = ["//visibility:private"],
    deps = ["//lib1"],
)
